--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ img{
 }
 .top-nav {
 	background-color:rgba(0,0,0,.25);
-    z-index: 999;
+    z-index: 1000;
     padding: 1.5em 0 1em;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
@@ -214,7 +214,7 @@ ul.nav.navbar {
     display: inline-block;
     text-align: center;
     position: relative;
-    z-index: 999;
+    z-index: 1000;
     -webkit-transition: .5s all;
     -moz-transition: .5s all;
     -o-transition: .5s all;
@@ -251,7 +251,7 @@ ul.nav.navbar {
 /*-- //banner-text --*/
 /*-- banner-bottom --*/
 .welcome,.stats,.services,.about,.about-slid,.team,.contact,.gallery,.codes{
-	padding:5em 0;
+	padding:3em 0;
 }
 p{
 	font-size:1.25em;
@@ -392,7 +392,7 @@ h3.agileits-title,h2.agileits-title{
     background: url(../images/bg1.jpg)no-repeat center 0px fixed;
     background-size: cover;
 	background:#5ac34a;
-	margin-top:6em;
+	margin-top:3em;
 }
 .stats-agileinfo{
 	text-align: center;
@@ -2120,7 +2120,7 @@ a.w3effct-agile.w3effct-agile-mdl {
 }
 button.navbar-toggle {
     margin: 0.5em 2em 0 0;
-    z-index: 9999;
+    z-index: 1000;
     border-color: #fff;
 }
 .navbar-toggle .icon-bar {
@@ -2130,7 +2130,7 @@ div#bs-example-navbar-collapse-1 {
     position: absolute;
     width: 100%;
     background: rgba(0, 0, 0, 0.77);
-    z-index: 9999;
+    z-index: 1000;
     padding-bottom: .5em;
     margin: 1em 0 0;
     left: 0;
